Ensure current avatar remains visible

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -519,7 +519,7 @@ input[type="password"] {
     gap: 0.5em;
 }
 
-.avatar-preview-pane:not(.avatar-preview-visible) {
+.avatar-preview-container:not(.avatar-preview-visible) {
     display: none;
 }
 
